# no-free-signal

./: .gitignore  LICENSE  README.md  ZENODO.txt  compare_determinism.py  pyproject.toml  validate_canonical.py
foresight/: __init__.py
foresight/envs/: __init__.py  audio.py  instinct_gridworld.py  puzzles.py  unified_world.py
foresight/evolution/: __init__.py  genome.py  lineage.py
foresight/models/: drives.py  encoder.py  rssm.py
foresight/training/: replay.py  smoke_train.py
no_free_signal/: README.md  __init__.py  bedrock_client.py  brains.py  controller.py  llm_controller.py  llm_prose.py  observation.py  serialize.py  world.py
no_free_signal/experiments/: __init__.py  ablations.py  behavior_analysis.py  behavioral_logger.py  harness.py  llm_emit_logger.py  (+5 more)
notes/: biology.md  experiments.md  instrumentation_bias.md  ml-architectures.md  proxy-options.md  v1-decision.md
results_15k_behavioral/: behavior_results.json
results_15k_fitness/: A_seed0.jsonl  A_seed1.jsonl  A_seed10.jsonl  A_seed11.jsonl  A_seed12.jsonl  A_seed13.jsonl  A_seed14.jsonl  A_seed15.jsonl  A_seed16.jsonl  A_seed17.jsonl  A_seed18.jsonl  A_seed19.jsonl  A_seed2.jsonl  A_seed3.jsonl  A_seed4.jsonl  A_seed5.jsonl  A_seed6.jsonl  A_seed7.jsonl  A_seed8.jsonl  A_seed9.jsonl  B_seed0.jsonl  B_seed1.jsonl  B_seed10.jsonl  B_seed11.jsonl  B_seed12.jsonl  B_seed13.jsonl  B_seed14.jsonl  B_seed15.jsonl  B_seed16.jsonl  B_seed17.jsonl  B_seed18.jsonl  B_seed19.jsonl  B_seed2.jsonl  B_seed3.jsonl  B_seed4.jsonl  B_seed5.jsonl  B_seed6.jsonl  B_seed7.jsonl  B_seed8.jsonl  B_seed9.jsonl  (+102 more)
(+2 files in other folders)
