[project]
name = "no_free_signal"
version = "0.3.0"
description = "Substrate-level evolution around fixed-LLM agent populations: experimental harness for testing whether selection pressure on a heritable communication substrate can make a frozen LLM adaptively useful."
requires-python = ">=3.11,<3.13"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "einops>=0.8",
    "tensorboard>=2.18",
    "matplotlib>=3.8",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "pydantic>=2.7",
    "pillow>=10.0",
    "anthropic[bedrock]>=0.40",
    "boto3>=1.35",
    "python-dotenv>=1.0",
]

[project.scripts]
no_free_signal-experiment = "no_free_signal.experiments.harness:main"
no_free_signal-report = "no_free_signal.experiments.report:main"
no_free_signal-plot = "no_free_signal.experiments.plot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foresight", "no_free_signal"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }]
torchvision = [{ index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }]
